init upgrade