@@ -8,9 +8,18 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<java.version>8</java.version>
+		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<poi.version>3.15</poi.version>
+		<file.encoding>UTF-8</file.encoding>
+		<spring-boot.version>3.2.4</spring-boot.version>
+		<itextpdf.version>5.5.13.3</itextpdf.version>
+        <itextpdf.core.version>7.2.3</itextpdf.core.version>
+        <itextpdf.cleanup.version>3.0.1</itextpdf.cleanup.version>
+        <pdfbox.version>3.0.0</pdfbox.version> 
+		<poi.version>5.2.2</poi.version>
+		<spring-boot.version>3.2.4</spring-boot.version> 
 	</properties>
 
 	<dependencies>
@@ -38,12 +47,57 @@
 		<dependency>
 			<groupId>org.xhtmlrenderer</groupId>
 			<artifactId>flying-saucer-pdf</artifactId>
-			<version>9.1.1</version>
+			<version>9.7.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.10.2</version>
+			<version>1.17.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.openhtmltopdf</groupId>
+		    <artifactId>openhtmltopdf-core</artifactId>
+		    <version>1.0.10</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.openhtmltopdf</groupId>
+		    <artifactId>openhtmltopdf-pdfbox</artifactId>
+		    <version>1.0.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+		    <groupId>com.github.hkirk</groupId>
+		    <artifactId>java-html2image</artifactId>
+		    <version>0.9</version>
+		  </dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>fontbox</artifactId>
+			<version>2.0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox-tools</artifactId>
+			<version>2.0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.jtidy</groupId>
+			<artifactId>jtidy</artifactId>
+			<version>1.0.5</version>
 		</dependency>
 	</dependencies>
 
@@ -56,8 +110,161 @@
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
+					<showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+	                <compilerArgs>
+					    <arg>--enable-preview</arg> 
+	                    <arg>--add-opens</arg>
+	                    <arg>java.base/java.lang=ALL-UNNAMED</arg> 
+						<arg>--add-opens</arg>
+	                    <arg>java.xml/jdk.xml.internal=ALL-UNNAMED</arg> 
+	                </compilerArgs>	                 
+	                <fork>true</fork>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
+					<classesDirectory>${project.build.outputDirectory}</classesDirectory> 
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine> 
+					<argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine> 
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<configuration>
+					<transitive>false</transitive>
+				</configuration>
+				<executions>
+					<execution>
+                        <phase>compile</phase> 
+                        <goals>
+	                        <goal>unpack</goal>
+	                    </goals>
+                        <configuration>
+	                        <artifactItems>
+	                           <artifactItem>
+                                    <groupId>org.jacoco</groupId>
+                                    <artifactId>org.jacoco.agent</artifactId>
+                                    <version>0.8.11</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/agent</outputDirectory> 
+                                </artifactItem>
+	                        </artifactItems>
+	                     </configuration>
+					</execution>
+				</executions>
+			</plugin>
+			 <plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
+				    <argLine>--enable-preview</argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine> 
+					<argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+					<argLine>-javaagent:${project.build.directory}/agent/jacocoagent.jar=destfile=${project.build.directory}/jacoco.exec</argLine>
+                </configuration>
+			</plugin> 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId> 
+				<version>3.3.0</version> 
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.6.2</version>
+				<configuration>
+					<doclint>none</doclint>
+					<charset>UTF-8</charset>
+					<show>private</show>
+					<nohelp>true</nohelp>
+					<excludePackageNames>*.vo</excludePackageNames>
+					<additionalOptions>--enable-preview</additionalOptions>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Coverage Report -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
+				<configuration>  
+					<excludes>
+						<exclude>**/vo/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-check</id>
+						<phase>test</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>PACKAGE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
+	<dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency> 
+		</dependencies>	
+    </dependencyManagement>
+    <repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 </project>
